Update On-Merge.yml for Azure Pipelines

--- a/On-Merge.yml
+++ b/On-Merge.yml
@@ -28,7 +28,7 @@ steps:
   inputs:
     ConnectionDetailsSelection: 'Service Connection'
     AnalysisService: 'Veracode Analysis Center'
-    veracodeAppProfile: 'Verademo ADO'
+    veracodeAppProfile: 'Verademo ADO 3'
     version: 'Post-merge Scan: $(build.buildNumber)'
     filepath: './target/verademo.war'
     sandboxName: 'Release Candidate'
