--- a/.github/workflows/exemplo-sca.yml
+++ b/.github/workflows/exemplo-sca.yml
@@ -13,7 +13,7 @@ jobs:
       env:
         SRCCLR_API_TOKEN: ${{ secrets.SRCCLR_API_TOKEN }}
         JAVA_OPTS: -Xms2g -Xmx4g
-        SRCCLR_WORKSPACE_SLUG: ${{ variables.SCA_WORKSPACE }}
+        SRCCLR_WORKSPACE_SLUG: ${{ vars.SCA_WORKSPACE }}
       uses: veracode/veracode-sca@v2.1.12
       with:
         create-issues: false
